# cuda-path-tracing

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  compile_commands.json
assets/: README.md  cube.json  sponza.json
cmake/: FindTBB.cmake  ProgramUtilities.cmake
lib/: CMakeLists.txt
lib/gpgpu/: cuda_aabb.cpp  cuda_aabb.h  cuda_acceleration_structure.cpp  cuda_acceleration_structure.h  cuda_aov_output.cpp  cuda_aov_output.cu  cuda_aov_output.h  cuda_bvh.cpp  cuda_bvh.h  cuda_camera.h  cuda_converter.cpp  cuda_converter.h  cuda_geometry.cpp  cuda_geometry.h  cuda_geometry_aggregate.cpp  cuda_geometry_aggregate.h  cuda_image.cpp  cuda_image.cu  cuda_image.h  cuda_intersection.cu  cuda_intersection.h  cuda_light.h  cuda_object.cpp  cuda_object.h  cuda_path_integrator.cu  cuda_path_integrator.h  cuda_pinhole_perspective_camera.cpp  cuda_pinhole_perspective_camera.cu  cuda_pinhole_perspective_camera.h  cuda_point_light.cpp  cuda_point_light.h  cuda_ptr.h  cuda_ray.cpp  cuda_ray.cu  cuda_ray.h  cuda_sampler.cpp  cuda_sampler.cu  cuda_sampler.h  cuda_scene.cpp  cuda_scene.h  (+11 more)
lib/gpgpu/math/: cuda_affine_transform.cpp  cuda_affine_transform.cu  cuda_affine_transform.h  cuda_matrix.h  cuda_vector.h
lib/math/: angles.cpp  angles.h  distance.cpp  distance.h  rotation.cpp  rotation.h  transform.cpp  transform.h
lib/render/: aov_output.cpp  aov_output.h  cuda_renderer.cpp  cuda_renderer.cu  cuda_renderer.h
lib/scene/: object.cpp  object.h  scene.cpp  scene.h
lib/scene/camera/: camera.cpp  camera.h  pinhole_perspective_camera.cpp  pinhole_perspective_camera.h
lib/scene/geometry/: geometry.cpp  geometry.h  geometry_aggregate.cpp  geometry_aggregate.h  triangle.cpp  triangle.h  vertex_container.cpp  vertex_container.h  vertex_geometry.h
lib/scene/lights/: light.cpp  light.h  point_light.cpp  point_light.h
lib/scene/loader/: camera_loader.cpp  camera_loader.h  light_loader.cpp  light_loader.h  mesh_loader.cpp  mesh_loader.h  scene_loader.cpp  scene_loader.h  xform_loader.cpp  xform_loader.h
lib/utilities/: eigen_utility.h  enum_hash.h  error.h  filesystem_utility.cpp  filesystem_utility.h  json_utility.cpp  json_utility.h  log.cpp  log.h  memory_ownership.h  noncopyable.h  progress_bar.cpp  progress_bar.h  timer.cpp  timer.h
programs/: CMakeLists.txt  path_tracer.cpp
report/: README.md  generate_report.py
tests/: CMakeLists.txt  angle_test.cpp  camera_loader_test.cpp  distance_test.cpp  mesh_loader_test.cpp  pinhole_perspective_camera_test.cpp  rotation_test.cpp  scene_loader_test.cpp  test_common.cpp  test_common.h  transform_test.cpp  triangle_test.cpp  vertex_container_test.cpp  xform_loader_test.cpp
tests/data/: test_scene.json  test_scene2.json  test_scene3.json  test_scene4.json  test_scene5.json  test_scene6.json
tests/mocks/: camera_loader_mock.h  mesh_loader_mock.h  scene_builder_mock.h  scene_loader_mock.h  xform_loader_mock.h
